<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">
    <include layout="@layout/toolbar_setting"
        android:id="@+id/toolbar_home"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/va_care"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_to_reserve"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_radius_16dp"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/white"
            android:text="@string/tw_reserve"
            android:textSize="56sp"
            android:fontFamily="sans-serif-black"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_to_epidemic_info"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_radius_16dp"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/white"
            android:text="@string/tw_epidemic_info"
            android:textSize="56sp"
            android:fontFamily="sans-serif-black"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_to_edu_info"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_radius_16dp"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/white"
            android:text="@string/tw_edu_info"
            android:textSize="56sp"
            android:fontFamily="sans-serif-black"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_to_temp_rec"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_radius_16dp"
            android:backgroundTint="@color/light_red"
            android:textColor="@color/white"
            android:text="@string/tw_temp_rec"
            android:textSize="56sp"
            android:fontFamily="sans-serif-black"/>


    </LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>