<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:textSize="24sp"
            app:drawableLeftCompat="@drawable/ic_round_arrow_back_ios_24" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/tw_title"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/add"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="24sp"
            app:drawableEndCompat="@drawable/ic_round_playlist_add_24" />

    </androidx.appcompat.widget.Toolbar>

</LinearLayout>