<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/va_care"
        android:textColor="@color/white"
        android:textSize="100sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="false"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:hint="@string/your_email"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:background="@drawable/ic_radius_16dp"
                android:fontFamily="sans-serif-black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:textSize="24sp"
                android:background="@drawable/ic_radius_16dp"
                android:fontFamily="sans-serif-black" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_to_home"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/ic_radius_16dp"
            android:backgroundTint="@color/purple"
            android:text="@string/tw_login"
            android:textColor="@color/white"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/button_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="24sp"/>


    </LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>